enhance debug logging for Cursor handling; adjust logging levels in appsettings

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "ClaudeAzureGptProxy.Services.ResponseLog": "Debug"
+      "ClaudeAzureGptProxy.Services.ResponseLog": "Debug",
+      "Program": "Debug"
     }
   }
 }
