--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "ClaudeAzureGptProxy.Services.ResponseLog": "Debug",
+      "Program": "Debug"
     }
   },
   "AllowedHosts": "*"
